Improved title spacing, fixes to tests

--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -464,6 +464,7 @@ a,
 
 .formcomponents {
   .builder-sidebar {
+    top: 125px;
     .form-builder-panel {
       .formcomponent.btn-block {
         width: 100%;
